Add About and Experience

--- a/portfolio/client/index.html
+++ b/portfolio/client/index.html
@@ -8,12 +8,18 @@
     <ul class="list-inline">
         <li class="top"><h1>Home</h1></li>
         <li class="about"><h1>About</h1></li>
+        <li class="experience"><h1>Doświadczenie</h1></li>
     </ul>
 </nav>
 
 <div id="top" ng-include="'client/views/top.ng.html'"></div>
-<div id="visualization"></div>
+<div id="visualization" ng-include="'client/views/visualization.ng.html'"></div>
 <div id="about" ng-include="'client/views/about.ng.html'"></div>
+<div id="experience" ng-include="'client/views/experience.ng.html'"></div>
 
 
+
+
+
+<script scr="client/lib/scrolling.js"></script>
 </body>
